cases/nginx-ingress/class_only_upgrade/resource/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  namespace: demo
spec:
  ingressClassName: ingress-2
  rules:
    - host: class.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app
                port:
                  number: 80
